# Amazones

./: .gitignore  Cargo.toml
.github/workflows/: api.yml  contracts.yml  web.yml
apps/web/: README.md  base32-js.d.ts  package.json
contracts/agent_registry/: Cargo.toml
contracts/market_core/: Cargo.toml
contracts/market_factory/: Cargo.toml
contracts/resolution/: Cargo.toml
contracts/resolution/src/: lib.rs
contracts/resolution/test_snapshots/tests/: proposes_and_finalizes_after_window.1.json
contracts/shared/: Cargo.toml
deployments/testnet/: .env.example  2026-04-02-core-deployment.md  2026-04-02-market-core-validation.md  README.md
docs/architecture/: 00-executive-summary.md  01-system-design.md  02-smart-contracts-design.md  03-api-design.md  04-agent-creation-flow.md  05-deployment-topology.md
docs/design-system/: 01-visual-identity-and-design-system.md
docs/integrations/: 01-x402-premium-consumption.md
docs/ops/: 01-environments-and-deployments.md  02-observability-and-alerts.md  03-runbooks.md
docs/release/: 2026-04-05-agent-flow-validation.md  2026-04-05-closed-beta-readiness.md  2026-04-05-human-flow-validation.md
docs/research/: 01-stellar-ecosystem-overview.md  02-prediction-market-architecture.md  03-oracles-research.md  04-x402-and-mpp-research.md  05-openzeppelin-stellar-research.md  (+7 more)
mcp/: README.md
scripts/: build-contracts.sh  install-skills.sh  testnet-bootstrap.sh  testnet-deploy-core.sh  testnet-deploy-market-core.sh  testnet-smoke.sh  vendor-external-deps.sh
services/api/: .env.example  (+3 more)
skills/: README.md  sources.md
(+79 files in other folders)
