[workspace]
resolver = "2"
members = [
    "contracts/shared",
    "contracts/market_factory",
    "contracts/market_core",
    "contracts/resolution",
    "contracts/agent_registry",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
soroban-sdk = "25.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
